# JavlibraryScrapy

./: .env  .env.example  .gitignore  IPZ-039 いきなりSEX えっ？今ここでですか？ 佳苗るか.nfo  Move-VideoFiles.ps1  README.md  README.zh.md  Rename-FilesByAtSymbol.ps1  SCRAPLING_COMPARISON.md  SCRAPLING_QUICK_START.md  SCRAPY_MIGRATION_GUIDE.md  SCRAPY_SETUP_GUIDE.md  SSNI-999 SSNI-999 着エロアイドル山崎水愛が無抵抗に痴●されて… 残酷少女姦5シチュエーション.nfo  car.py  debug_scraper.py  example.html  filesave.py  javbus.py  javbus_scrapling.py  javbus_scrapy.py  javlibrary_scrapling.py  main.py  pyproject.toml  utils.py
docs/: FILES_CREATED.md  FINAL_SUMMARY.md  HOWTO.md  JAVLIBRARY_SCRAPER_GUIDE.md  PROJECT_COMPLETION.md  PROJECT_FILES.md  QUICKSTART.md  SKILL.md  SKILL_COMPLETION.md  SKILL_MD_GUIDE.md  TROUBLESHOOT_403.md
output/: javlibrary_movies.csv  javlibrary_movies.json
test/: debug_scraper.py  test_proxy.py  test_scraper.py  verify_parsing.py
utils/: car.py
