[project]
name = "javlibraryscrapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.2.1",
    "poetry>=2.1.3",
    "requests>=2.32.4",
    "scrapy>=2.13.2",
    "seleniumbase>=4.39.3",
]

[[tool.uv.index]]
# Optional name for the index. 这个可以不写
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "torch-cpu-nju"
url = "https://mirror.nju.edu.cn/pytorch/whl/cpu/"
explicit = true

[tool.uv.sources]
torch = [{ index = "torch-cpu-nju" }]
